--- a/Eliel KIZITO.html
+++ b/Eliel KIZITO.html
@@ -11,7 +11,8 @@
     <h1>Eliel's SAMPLE WEBSITE</h1>
 
     <p>I like when i have fun with my friends because we advise each other and organise good projects to prepare to be great personalities
-        in the future.</p>
+        in the future. 
+    Thank you!</p>
         
 
         
